--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="reserva.html">Reserva</a>
-            <a href="galeria.html">Galeria</a>
-            <a href="index.html">Home</a>
-        </nav>
+    <header class="container">
+        <div class="barranavegacion">
+            <nav>
+                <a href="reserva.html">Reserva</a>
+                <a href="galeria.html">Galeria</a>
+                <a href="index.html">Home</a>
+            </nav>
+        </div>
+        <div class="imagen">
+            <img src="img/benjamin-voros-U-Kty6HxcQc-unsplash.jpg" alt="imagen" class="imagencss">
+        </div>
     </header>
     <main>
         <h1>To the Moon!!</h1>
@@ -20,4 +25,7 @@
         <a href="reserva.html">Fes una reserva</a>
     </main>
 </body>
+<footer>
+    <p>&copy; Carrer Cabana 31, 07141 Es Pont d'Inca.</p>
+</footer>
 </html>
