--- a/reserva.html
+++ b/reserva.html
@@ -14,22 +14,24 @@
             <a href="index.html">Home</a>
         </nav>
     </header>
-    <form action="index.html" method="get">
-        <div>
-            <label for="passatgers">Passatgers:</label>
-            <input type="text" name="Passatgers" id="passatgers" required>
-        </div>
-        <div>
-            <label for="data_sortido">Data de Sortida:</label>
-            <input type="date" name="data de sortida" id="data_sortido" required>
-        </div>
-        <div>
-            <label for="Data_tornada">Data de tornada:</label>
-            <input type="date" id="Data_tornada" name="Data de tornada" required>
-        </div>
-        <div>
-            <input type="submit" name="Enviar!">
-        </div>
-    </form>
+    <main class="contenedor">
+        <form action="index.html" method="get">
+            <div>
+                <label for="passatgers">Passatgers:</label>
+                <input type="text" name="Passatgers" id="passatgers" required>
+            </div>
+            <div>
+                <label for="data_sortido">Data de Sortida:</label>
+                <input type="date" name="data de sortida" id="data_sortido" required>
+            </div>
+            <div>
+                <label for="Data_tornada">Data de tornada:</label>
+                <input type="date" id="Data_tornada" name="Data de tornada" required>
+            </div>
+            <div>
+                <input type="submit" name="Enviar!">
+            </div>
+        </form>
+    </main>
 </body>
 </html>
