--- a/index.html
+++ b/index.html
@@ -4,26 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/styless.css">
 </head>
 <body>
     <header class="container">
-        <div class="barranavegacion">
-            <nav>
-                <a href="reserva.html">Reserva</a>
-                <a href="galeria.html">Galeria</a>
-                <a href="index.html">Home</a>
-            </nav>
-        </div>
-        <div class="imagen">
-            <img src="img/benjamin-voros-U-Kty6HxcQc-unsplash.jpg" alt="imagen" class="imagencss">
-        </div>
-    </header>
-    <main>
         <h1>To the Moon!!</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <a href="reserva.html">Fes una reserva</a>
-    </main>
+        <nav>
+            <a href="reserva.html">Reserva</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="index.html">Home</a>
+        </nav>
+        <img src="img/benjamin-voros-U-Kty6HxcQc-unsplash.jpg" alt="imagen" class="imagencss">
+    </header>
 </body>
 <footer>
     <p>&copy; Carrer Cabana 31, 07141 Es Pont d'Inca.</p>
