--- a/reserva.html
+++ b/reserva.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reserva</title>
-    <link rel="stylesheet" href="css/reserva.css">
+    <link rel="stylesheet" href="css/styless.css">
 </head>
 <body>
     <header>
@@ -14,24 +14,26 @@
             <a href="index.html">Home</a>
         </nav>
     </header>
-    <main class="contenedor">
-        <form action="index.html" method="get">
-            <div>
-                <label for="passatgers">Passatgers:</label>
-                <input type="text" name="Passatgers" id="passatgers" required>
-            </div>
-            <div>
-                <label for="data_sortido">Data de Sortida:</label>
-                <input type="date" name="data de sortida" id="data_sortido" required>
-            </div>
-            <div>
-                <label for="Data_tornada">Data de tornada:</label>
-                <input type="date" id="Data_tornada" name="Data de tornada" required>
-            </div>
-            <div>
-                <input type="submit" name="Enviar!">
-            </div>
-        </form>
+    <main>
+        <div class="contenedor">
+            <form action="index.html" method="get">
+                <div>
+                    <label for="passatgers">Passatgers:</label>
+                    <input type="text" name="Passatgers" id="passatgers" required>
+                </div>
+                <div>
+                    <label for="data_sortido">Data de Sortida:</label>
+                    <input type="date" name="data de sortida" id="data_sortido" required>
+                </div>
+                <div>
+                    <label for="Data_tornada">Data de tornada:</label>
+                    <input type="date" id="Data_tornada" name="Data de tornada" required>
+                </div>
+                <div>
+                    <input type="submit" name="Enviar!">
+                </div>
+            </form>
+        </div>
     </main>
 </body>
 </html>
