--- a/galeria.html
+++ b/galeria.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="css/styless.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="nav-bar">
+            <a href="index.html">Home</a>
+            <a href="galeria.html">Galeria</a>
+            <a href="reserva.html">Reserva</a>
+        </nav>
+    </header>
+    <main>
+        <div class="galeria">
+            <img src="img//galeria/alexander-andrews-vGCErDhrc3E-unsplash.jpg" alt="Image 1">
+            <img src="img//galeria/eberhard-grossgasteiger-u4RMq06Qg3M-unsplash.jpg" alt="Image 2">
+            <img src="img//galeria/marty-mcguire-M9jT6Ck54Jg-unsplash.jpg" alt="Image 3">
+            <img src="img/galeria/nathan-anderson-pTgMXg2WrHY-unsplash.jpg" alt="Image 4">
+            <img src="img//galeria/nousnou-iwasaki-Dc3YQuyr2pU-unsplash.jpg" alt="Image 5">
+            <img src="img/galeria/mitchell-bowser--EAu74i-u54-unsplash.jpg" alt="Image 6">
+            <img src="img//galeria/marcus-dall-col-6RMFM8uv3eY-unsplash.jpg" alt="Image 7">
+            <img src="img/galeria/matt-benson-PHyoU6jnNVk-unsplash.jpg" alt="Image 8">
+            <img src="img//galeria/istockphoto-2167122295-1024x1024.jpg" alt="Image 9">
+        </div>
+    </main>
 </body>
+<footer>
+    <p>&copy; Carrer Cabana 31, 07141 Es Pont d'Inca.</p>
+</footer>
 </html>
