--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <header class="container">
-        <h1>To the Moon!!</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <a href="reserva.html">Fes una reserva</a>
-        <nav>
+        <nav class="navegador">
             <a href="reserva.html">Reserva</a>
             <a href="galeria.html">Galeria</a>
             <a href="index.html">Home</a>
         </nav>
         <img src="img/benjamin-voros-U-Kty6HxcQc-unsplash.jpg" alt="imagen" class="imagencss">
     </header>
+    <main>
+        <h1>To the Moon!!</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <a href="reserva.html">Fes una reserva</a>
+    </main>
 </body>
 <footer>
     <p>&copy; Carrer Cabana 31, 07141 Es Pont d'Inca.</p>
