--- a/reserva.html
+++ b/reserva.html
@@ -15,7 +15,7 @@
         </nav>
     </header>
     <main>
-        <div class="contenedor">
+        <div class="contenedor-reservas">
             <form action="index.html" method="get">
                 <div>
                     <label for="passatgers">Passatgers:</label>
@@ -36,4 +36,7 @@
         </div>
     </main>
 </body>
+<footer>
+    <p>&copy; Carrer Cabana 31, 07141 Es Pont d'Inca.</p>
+</footer>
 </html>
