--- a/galeria.html
+++ b/galeria.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav class="nav-bar">
+        <nav class="navegador">
             <a href="index.html">Home</a>
             <a href="galeria.html">Galeria</a>
             <a href="reserva.html">Reserva</a>
