--- a/index.html
+++ b/index.html
@@ -7,18 +7,20 @@
     <link rel="stylesheet" href="css/styless.css">
 </head>
 <body>
+    <nav class="navegador">
+        <a href="reserva.html">Reserva</a>
+        <a href="galeria.html">Galeria</a>
+        <a href="index.html">Home</a>
+    </nav>
     <header class="container">
-        <nav class="navegador">
-            <a href="reserva.html">Reserva</a>
-            <a href="galeria.html">Galeria</a>
-            <a href="index.html">Home</a>
-        </nav>
-        <img src="img/benjamin-voros-U-Kty6HxcQc-unsplash.jpg" alt="imagen" class="imagencss">
+        <img src="img/moon.jpg" alt="imagen" class="imagencss">
     </header>
     <main>
         <h1>To the Moon!!</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-        <a href="reserva.html">Fes una reserva</a>
+        <nav class="as">
+            <a href="reserva.html">Fes una reserva</a>
+        </nav>
     </main>
 </body>
 <footer>
