--- a/reserva.html
+++ b/reserva.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="navegador">
             <a href="reserva.html">Reserva</a>
             <a href="galeria.html">Galeria</a>
             <a href="index.html">Home</a>
@@ -16,6 +16,7 @@
     </header>
     <main>
         <div class="contenedor-reservas">
+            <h2>Reserva el teu viatge a la luna</h2>
             <form action="index.html" method="get">
                 <div>
                     <label for="passatgers">Passatgers:</label>
